--- a/imports/ui/layouts/body/header.html
+++ b/imports/ui/layouts/body/header.html
@@ -1,5 +1,5 @@
 <template name="header">
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
         <button class="navbar-toggle collapsed" type="button" data-target="#bs-example-navbar-collapse-2" data-toggle="collapse">
