--- a/imports/ui/layouts/body/header.html
+++ b/imports/ui/layouts/body/header.html
@@ -13,7 +13,7 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
         <ul class="nav navbar-nav">
-          <li><a href="/">Home</a></li>
+          <li><a href="{{ pathFor 'home' }}">Home</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           {{#if currentUser}}
