--- a/imports/ui/components/idea/listing.html
+++ b/imports/ui/components/idea/listing.html
@@ -2,12 +2,12 @@
     
     <div>
         <h2><a href="#">{{summary}}</a></h2>
-        <p>{{description}}</p>
+        <p>{{trimDescription}}</p>
         <p>
         	<a href="#"><span class="glyphicon glyphicon-thumbs-up text-success"></span></a>&nbsp;{{likes_count}}
         	
         	<span class="glyphicon glyphicon-thumbs-down text-warning"></span>&nbsp;{{dislikes_count}}
         </p>
-		<a href="#" class="read-more">View Details &rarr;</a>
+		<a href="#" class="btn btn-primary">View Details &rarr;</a>
     </div>
  </template>
