--- a/imports/ui/layouts/body/sideMenu.html
+++ b/imports/ui/layouts/body/sideMenu.html
@@ -1,7 +1,7 @@
 <template name="sideMenu">
-  <nav class="navbar navbar-default" role="navigation">
+  <nav class="navbar navbar-default" style="background-color: white; border: none;"  role="navigation">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
+      <button type="button" class="navbar-toggle collapsed"  style="background-color:#E95420;" data-toggle="collapse" data-target="#navbar-collapse-2">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -13,9 +13,9 @@
 	{{#if currentUser}}
 	    <div class="panel-heading">Our Pick</div>
 	      <ul class="nav nav-stacked">
-	      	<li><a href="#" class="list-group-item">Top Ranked</a></li>
-	      	<li><a href="#" class="list-group-item">Most Liked</a></li>
-	      	<li><a href="#" class="list-group-item">Recently Added</a></li>
+	      	<li><a href="#">Top Ranked</a></li>
+	      	<li><a href="#">Most Liked</a></li>
+	      	<li><a href="#">Recently Added</a></li>
 	      </ul>
 	      <hr />
 	      <div class="panel-heading">Categories</div>
