--- a/imports/ui/layouts/body/sideMenu.html
+++ b/imports/ui/layouts/body/sideMenu.html
@@ -26,9 +26,9 @@
 	{{else}}
 	      <div class="panel-heading">Something</div>
 	      <ul class="nav nav-stacked">
-	      	<li><a href="#" class="list-group-item">Link 1</a></li>
-	      	<li><a href="#" class="list-group-item">Link 2</a></li>
-	      	<li><a href="#" class="list-group-item">Link 3</a></li>
+	      	<li><a href="#">Link 1</a></li>
+	      	<li><a href="#">Link 2</a></li>
+	      	<li><a href="#">Link 3</a></li>
 	      </ul>
 	      <hr />
 	      <div class="panel-heading">Something else</div>
