Metro UI Applied

--- a/imports/ui/components/idea/create.html
+++ b/imports/ui/components/idea/create.html
@@ -1,4 +1,6 @@
 <template name="createIdeaForm">
+
+<h4>Try to bried your <strong>Idea here</strong></h4>
   {{flash}}
   {{#autoForm schema="IdeaSchema" collection="Idea" id="insertIdeaForm" type="insert" doc=defaultValues}}
     <fieldset>
