--- a/imports/ui/components/idea/listing.html
+++ b/imports/ui/components/idea/listing.html
@@ -1,7 +1,6 @@
 <template name="ideaListing">
-    
-    <div>
-        <h2><a href="#">{{summary}}</a></h2>
+<div class="tile ol-transparent" data-role="tile">
+        <h4><a href="#">{{summary}}</a></h4>
         <p>{{trimDescription}}</p>
         <p>
         	<a href="#"><span class="glyphicon glyphicon-thumbs-up text-success"></span></a>&nbsp;{{likes_count}}
@@ -9,5 +8,5 @@
         	<span class="glyphicon glyphicon-thumbs-down text-warning"></span>&nbsp;{{dislikes_count}}
         </p>
 		<a href="#" class="btn btn-primary">View Details &rarr;</a>
-    </div>
+</div>
  </template>
