--- a/imports/ui/layouts/body/header.html
+++ b/imports/ui/layouts/body/header.html
@@ -1,33 +1,50 @@
 <template name="header">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button class="navbar-toggle collapsed" type="button" data-target="#bs-example-navbar-collapse-2" data-toggle="collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">IDEA BOOTCAMP</a>
-      </div>
+  <div class="app-bar darcula fixed-top" data-role="appbar">
+      <a class="app-bar-element bg-blue" href="/">Idea BootCamp</a>
 
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-        <ul class="nav navbar-nav">
-          <li><a href="{{ pathFor 'home' }}">Home</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          {{#if currentUser}}
-            <li><a href="{{ pathFor 'createIdea' }}" class="btn btn-danger">Have an Idea?</a></li>
-            <li><a href="{{ pathFor 'manageProfile' }}">My Profile</a></li>
-            <li><a href="#" data-action="logout">Sign out</a></li>
-          {{else}}
-            <li><a href="{{ pathFor 'atSignIn' }}">Sign in</a></li>
-            <li><a href="{{ pathFor 'atSignUp' }}">Register</a></li>
-          {{/if}}
-                         
+      <span class="app-bar-divider"></span>
 
-        </ul>
+      <ul class="app-bar-menu">
+          <li class="stick bg-green"><a href="{{ pathFor 'home' }}">Browse Idea</a></li>
+          
+          <li class="stick bg-red"><a href="{{ pathFor 'createIdea' }}"><span class="mif-cog icon"></span>&nbsp;Create Idea</a></li>
+               
+      </ul>
+
+      {{#if currentUser}}
+      <div class="app-bar-element place-right">
+        <a href="#" data-action="logout" class="fg-white "><span class="mif-exit">&nbsp;</span>Sign Out</a>
+      </div>  
+      {{else}}
+
+      <div class="app-bar-element place-right">
+        <a class="dropdown-toggle fg-white "><span class="mif-enter">&nbsp;</span>Enter</a>
+        <div class="app-bar-drop-container place-right"
+                data-role="dropdown" data-no-close="true">
+            <div class="padding20">
+                <form>
+                    <h4 class="text-light">Login to service...</h4>
+                    <div class="input-control text">
+                        <span class="mif-user prepend-icon"></span>
+                        <input type="text">
+                    </div>
+                    <div class="input-control text">
+                        <span class="mif-lock prepend-icon"></span>
+                        <input type="password">
+                    </div>
+                    <label class="input-control checkbox small-check">
+                        <input type="checkbox">
+                        <span class="check"></span>
+                        <span class="caption">Remember me</span>
+                    </label>
+                    <div class="form-actions">
+                        <button class="button">Login</button>
+                        <button class="button link fg-whilte">Cancel</button>
+                    </div>
+                </form>
+            </div>
+        </div>
       </div>
-    </div>
-  </nav>
+      {{/if}}
+  </div>
 </template>
